# WindowsAgent

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
config/: settings.example.yaml
docs/: PROJECT_STATUS.md  WINDOWS_INSTALL_CHECKLIST.md
scripts/: bootstrap.ps1  clipboard_bridge.ps1  emergency_hide.ps1  full_uninstall.ps1  install_service.ps1  install_voice_autostart.ps1  run_dev.ps1  uninstall_service.ps1  uninstall_voice_autostart.ps1
src/windows_agent/: __init__.py  config.py  main.py  runtime.py  service.py
src/windows_agent/integrations/: mail_calendar.py
src/windows_agent/safety/: policy.py
src/windows_agent/storage/: audit.py
src/windows_agent/tools/: system_tools.py
src/windows_agent/voice/: pipeline.py
tests/: test_policy.py
